<resources>
    <string name="app_name">北极光播放器</string>
    <string name="player">播放器</string>
    <string name="webdav_connect">连接 WebDAV</string>
    <string name="local_files">本地文件</string>
    <string name="webdav_files">网络文件</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="previous">上一个</string>
    <string name="next">下一个</string>
    <string name="seek_forward">快进10秒</string>
    <string name="seek_backward">快退10秒</string>
    <string name="volume_up">音量增大</string>
    <string name="volume_down">音量减小</string>
    <string name="fullscreen">全屏</string>
    <string name="exit_fullscreen">退出全屏</string>
    <string name="repeat_off">不循环</string>
    <string name="repeat_one">单曲循环</string>
    <string name="repeat_all">列表循环</string>
    <string name="shuffle_on">随机播放开启</string>
    <string name="shuffle_off">随机播放关闭</string>
    <string name="webdav_host">服务器地址</string>
    <string name="webdav_port">端口</string>
    <string name="webdav_username">用户名</string>
    <string name="webdav_password">密码</string>
    <string name="webdav_path">路径</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>
    <string name="loading">加载中...</string>
    <string name="error_load_failed">加载失败，请检查网络或文件</string>
    <string name="error_no_permission">没有读取文件的权限</string>
    <string name="error_webdav_failed">WebDAV 连接失败</string>
    <string name="permission_request">需要读取媒体文件权限才能播放本地文件</string>
    <string name="grant_permission">授予权限</string>
    <string name="now_playing">正在播放</string>
    <string name="playlist">播放列表</string>
    <string name="add_to_playlist">添加到播放列表</string>
    <string name="clear_playlist">清空播放列表</string>
    <string name="back">返回</string>
    <string name="settings">设置</string>
    <string name="current_position">当前位置</string>
    <string name="total_duration">总时长</string>
</resources>
